# Red-Button

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROJECT.md  README.md  openenv.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: environment-builder.md  evaluator.md  training-builder.md
.claude/commands/: baseline.md  deploy.md  phase.md  validate.md
.claude/hooks/: pre-commit.sh
data/: problems_pool.json
docs/: ARCHITECTURE.md  PITCH_SCRIPT.md  REWARD_DESIGN.md
evaluation/: baseline_rollout.py  concurrent_load_test.py  evaluate.py
red_button/: __init__.py  audit.py  client.py  models.py  problems.py  restricted_python.py  rubrics.py  sandbox.py  tiers.py  turn_budget.py
results/: phase10_concurrency.json
results/baseline_runs/phase11_7_t2/: episode_523aa4f8-c16a-4f84-9ee5-66f887e60bd4.json  summary.json
results/baseline_runs/phase11_7_t3/: episode_65c4d096-506e-4d48-bf0e-556df73a7d05.json  summary.json
results/baseline_runs/phase11_anthropic_t2/: episode_2f99ceb3-2881-4771-9645-72c50b8bf20e.json  episode_6f65fb33-552c-490e-b6e6-ae7b6b423ecd.json  episode_facd811d-97a0-4a9f-b30a-644b6cb1e3e7.json  summary.json
results/baseline_runs/phase11_anthropic_t3/: episode_c1edf900-be44-48eb-8f74-7619792aadc9.json  summary.json
results/baseline_runs/phase11_cleanup_t2/: debug_22c5a410_parse_failures.jsonl
results/baseline_runs/phase11_cleanup_t3/: debug_41d9f05b_parse_failures.jsonl
results/baseline_runs/phase11_validation_t2/: episode_05c98705-048f-49cd-8d06-9805833681f7.json  episode_1f920861-d31c-4047-a8d4-b342d0ff9b51.json  episode_c5d11f68-c301-485e-baa7-271b6cf17004.json  summary.json
results/baseline_runs/phase11_validation_t3/: episode_5426436f-5451-4d36-8dfd-db16ba06bac2.json  summary.json
scripts/: generate_problems_pool.py  smoke_test_concurrent.py  smoke_test_docker.py  smoke_test_hf.py  smoke_test_hf_concurrent.py  test_anthropic_key.py
server/: Dockerfile  app.py  requirements.txt  shutdown_environment.py
shutdown_gym/: __init__.py  client.py  models.py  problems.py  restricted_python.py  rubrics.py  sandbox.py  tiers.py
tests/: test_audit.py  test_concurrency.py  test_environment.py  test_models.py  test_problems.py  test_restricted_python.py  test_rubrics.py  test_sandbox.py  test_tiers.py  test_turn_budget.py
training/: rollout_func.py  sft_induction.py  train_colab.ipynb  train_grpo.py
